# hector_centaur

./: README.md  hector_centaur.rosinstall
hector_centaur_description/: CMakeLists.txt  package.xml
hector_centaur_description/launch/: xacrodisplay_centaur_default.launch
hector_centaur_description/robots/: centaur_default.urdf.xacro
hector_centaur_gazebo/: CMakeLists.txt  package.xml
hector_centaur_gazebo/config/: centaur_default_controllers.yaml
hector_centaur_gazebo/launch/: centaur_default_controllers.launch  gazebo_start.launch  spawn_centaur_default.launch  spawn_centaur_default_with_controllers.launch  start_centaur_default_with_controllers.launch
hector_centaur_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
hector_centaur_moveit_config/config/: controllers.yaml  fake_controllers.yaml  hector_centaur.srdf  kinematics.yaml  ompl_planning.yaml
hector_centaur_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  hector_centaur_moveit_controller_manager.launch.xml  hector_centaur_moveit_sensor_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
hector_centaur_onboard/: CMakeLists.txt  package.xml
hector_centaur_onboard/launch/: lidar_proc.launch  onboard_default.launch  onboard_reduced.launch
hector_centaur_scenarios/: CMakeLists.txt  package.xml
hector_centaur_scenarios/launch/: exploration_door.launch
hector_centaur_ui_launch/: CMakeLists.txt  package.xml
hector_centaur_ui_launch/launch/: centaur_ocs_model.launch  thor_mang_main_ui.launch  thor_mang_ocs.launch  thor_mang_ocs_nodelets.launch
hector_centaur_ui_launch/launch/common/: common_parameter_setup.launch
