<?xml version="1.0"?>
<package>
  <name>hector_centaur_description</name>
  <version>0.0.0</version>
  <description>The hector_centaur_description package</description>

  <author email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</author>
  <maintainer email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</maintainer>

  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>hector_tracked_vehicles_description</build_depend>
  <build_depend>thor_mang_description</build_depend>
  <run_depend>hector_tracked_vehicles_description</run_depend>
  <run_depend>thor_mang_description</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>