<?xml version="1.0"?>
<package>
  <name>hector_centaur_gazebo</name>
  <version>0.0.0</version>
  <description>The hector_centaur_gazebo package</description>

  <author email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</author>
  <maintainer email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</maintainer>

  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>hector_centaur_description</build_depend>
  <build_depend>vigir_lidar_intensity_modifier</build_depend>
  <run_depend>hector_centaur_description</run_depend>
  <run_depend>vigir_lidar_intensity_modifier</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>