<?xml version="1.0"?>
<package>
  <name>hector_centaur_onboard</name>
  <version>0.0.0</version>
  <description>The hector_centaur_onboard package</description>

  <author email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</author>
  <maintainer email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>vigir_lidar_proc_launch</build_depend>
  <build_depend>vigir_laserscan_to_pointcloud</build_depend>
  <build_depend>robot_self_filter</build_depend>
  <build_depend>hector_launch</build_depend>    
  
  <run_depend>vigir_lidar_proc_launch</run_depend>
  <run_depend>vigir_laserscan_to_pointcloud</run_depend>
  <run_depend>robot_self_filter</run_depend>    
  <run_depend>hector_launch</run_depend> 

  <export>
  </export>
</package>